src/main/java/com/example/pruebatec/error/EmailAlreadyExistException.java
package com.example.pruebatec.error;

public class EmailAlreadyExistException extends Exception{
    public EmailAlreadyExistException(String message) {
        super(message);
    }
}
